# bt_api_zebpay

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  requirements.txt
src/bt_api_zebpay/: __init__.py  plugin.py  registry_registration.py
src/bt_api_zebpay/configs/: zebpay.yaml
src/bt_api_zebpay/errors/: __init__.py
src/bt_api_zebpay/exchange_data/: __init__.py
src/bt_api_zebpay/feeds/: __init__.py
src/bt_api_zebpay/feeds/live_zebpay/: request_base.py  spot.py
tests/containers/exchanges/: test_zebpay_exchange_data.py
