[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_zebpay"
version = "0.1.0"
description = "Zebpay exchange plugin for bt_api framework - Indian cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "zebpay",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto",
    "india"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_zebpay"
Repository = "https://github.com/cloudQuant/bt_api_zebpay"
Documentation = "https://bt-api-zebpay.readthedocs.io/"
Issues = "https://github.com/cloudQuant/bt_api_zebpay/issues"
Changelog = "https://github.com/cloudQuant/bt_api_zebpay/blob/master/CHANGELOG.md"

[project.entry-points."bt_api.plugins"]
zebpay = "bt_api_zebpay.plugin:register_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_zebpay"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "T20",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "COM",
    "DTZ",
    "EM",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "T10",
    "DJ",
    "E501",
    "E711",
    "E713",
    "E714",
    "E721",
    "E722",
    "E731",
    "W291",
    "W292",
    "W293",
    "W504",
]
ignore = [
    "E501",
    "E731",
]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
